Adding function CopyJson